# device_board_goodix

./: README.md
gr5515_sk/: ohos.build
gr5515_sk/liteos_m/: config.gni
hcs/: BUILD.gn
