# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m4"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi-gcc"

use_board_toolchain = true

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-std=c99",
  "--inline",
  "-ggdb",
  "-O1",
  "-ffunction-sections",
  "-fdata-sections",
  "-mfloat-abi=softfp",
  "-mfpu=fpv4-sp-d16",
  "-mapcs-frame",
  "-mcpu=cortex-m4",
  "-mthumb",
  "-mthumb-interwork",
  "-gdwarf-2",
  "-MD",
  "-fno-stack-protector",
  "-DLOSCFG_BASE_CORE_HILOG=1",
]

board_cxx_flags = []
board_ld_flags = [
  "-nostartfiles",
  "-mcpu=cortex-m4",
  "-mfloat-abi=softfp",
  "-mfpu=fpv4-sp-d16",
  "-mapcs-frame",
  "-mthumb",
  "-mthumb-interwork",
  "-Wl,--gc-sections",
  "-Wl,--start-group",
  "-Wl,--whole-archive",
  "-Llibs",
  "-lbootstrap",
  "-lsamgr_adapter",
  "-lsamgr_source",
  "-lbroadcast",

  # "-lhilog_lite",
  # "-lhiview_lite",

  # "-lutils_kv_store",
  "-lkernel",
  "-lgcc",
  "-lble_sdk",
  "-Wl,--no-whole-archive",
  "-Wl,--end-group",
  "-Wl,-Tbin/link.ld",
  "-nostdlib",
  "-Trom_symbol_gcc.txt",
  "-Wl,-Map=bin/application.map",
]

# Board related headfiles search path.
board_include_dirs = [
  "//commonlibrary/utils_lite/include",
  "//third_party/bounds_checking_function/include",
  "//third_party/mbedtls/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/soc/goodix/gr551x/adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
